refactor(schema): align SQL tables with entities and remove legacy order API stack